<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="baghi.naeem.com.final_project.activities.AddTaskActivity">

    <EditText
        android:id="@+id/add_task_title"
        android:inputType="text"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/add_task_description"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/add_task_title"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:lines="3"
        android:maxLines="5"
        android:gravity="top|start"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/add_task_due_date"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/add_task_description"
        android:hint="@string/due_date"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/add_task_due_time"
        android:inputType="time"
        app:layout_constraintTop_toBottomOf="@id/add_task_due_date"
        android:hint="@string/due_time"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/add_task_duration"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/add_task_due_time"
        android:hint="@string/duration_hours"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/add_task_add"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/add_uppercase"
        app:layout_constraintTop_toBottomOf="@id/add_task_duration"
        app:layout_constraintEnd_toStartOf="@+id/add_task_clear"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/add_task_clear"
        app:layout_constraintLeft_toRightOf="@id/add_task_add"
        app:layout_constraintTop_toTopOf="@id/add_task_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="2"
        android:text="@string/clear_uppercase"
        android:layout_width="0dp"
        android:layout_height="60dp" />

</android.support.constraint.ConstraintLayout>
