<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="baghi.naeem.com.final_project.activities.SignUpActivity">

    <EditText
        android:id="@+id/signup_username"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/signup_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/signup_username"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/signup_first_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/signup_password"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/signup_last_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/signup_first_name"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/signup_signup"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/sign_up_uppercase"
        app:layout_constraintTop_toBottomOf="@id/signup_last_name"
        app:layout_constraintEnd_toStartOf="@+id/signup_clear"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/signup_clear"
        app:layout_constraintLeft_toRightOf="@id/signup_signup"
        app:layout_constraintTop_toTopOf="@id/signup_signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="2"
        android:text="@string/clear_uppercase"
        android:layout_width="0dp"
        android:layout_height="60dp" />

</android.support.constraint.ConstraintLayout>
