<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="baghi.naeem.com.final_project.activities.LoginActivity">

    <EditText
        android:id="@+id/login_username"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/login_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/login_username"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/login_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/login_uppercase"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        app:layout_constraintEnd_toStartOf="@+id/login_signup"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/login_signup"
        app:layout_constraintLeft_toRightOf="@id/login_login"
        app:layout_constraintTop_toTopOf="@id/login_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="2"
        android:text="@string/sign_up_uppercase"
        android:layout_width="0dp"
        android:layout_height="60dp" />

</android.support.constraint.ConstraintLayout>
